--- a/day8.html
+++ b/day8.html
@@ -82,7 +82,7 @@
 
     <!-- Buttons -->
     <div class="buttons">
-      <button onclick="location.href='start.html'">Replay 🔁</button>
+      <button onclick="location.href='index.html'">Replay 🔁</button>
     </div>
 
   </div>
