--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
     } else {
       localStorage.removeItem('personalMessage');
     }
-    location.href = 'index.html';
+    location.href = 'main.html';
   }
 </script>
 
