--- a/index.html
+++ b/index.html
@@ -1,227 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>A Special Gift For You 💝</title>
-  <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
-  <style>
-    /* Floating Hearts Background */
-    .floating-hearts {
-      position: fixed;
-      width: 100%;
-      height: 100%;
-      overflow: hidden;
-      z-index: 0;
-      pointer-events: none;
-    }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>7 Days of Love</title>
 
-    .floating-heart {
-      position: absolute;
-      font-size: 20px;
-      animation: floatUp 6s ease-in infinite;
-      opacity: 0.6;
-    }
-
-    @keyframes floatUp {
-      0% {
-        transform: translateY(100vh) rotate(0deg);
-        opacity: 0;
-      }
-      10% {
-        opacity: 0.6;
-      }
-      90% {
-        opacity: 0.6;
-      }
-      100% {
-        transform: translateY(-100px) rotate(360deg);
-        opacity: 0;
-      }
-    }
-
-    /* Title Styling */
-    .intro-title {
-      font-family: 'Dancing Script', cursive;
-      font-size: 32px;
-      color: #7a2e3a;
-      margin-bottom: 8px;
-      animation: fadeInDown 1s ease-out;
-    }
-
-    .intro-subtitle {
-      font-size: 16px;
-      color: #9e4a5a;
-      margin-bottom: 20px;
-      animation: fadeInDown 1s ease-out 0.3s both;
-    }
-
-    @keyframes fadeInDown {
-      from {
-        opacity: 0;
-        transform: translateY(-20px);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-
-    /* Message Input */
-    .message-input {
-      width: 90%;
-      max-width: 260px;
-      height: 100px;
-      padding: 12px;
-      border: 2px solid #e8a0b0;
-      border-radius: 16px;
-      font-family: 'Patrick Hand', cursive;
-      font-size: 16px;
-      color: #7a2e3a;
-      background: rgba(255, 255, 255, 0.8);
-      resize: none;
-      outline: none;
-      animation: fadeIn 1s ease-out 0.6s both;
-    }
-
-    .message-input::placeholder {
-      color: #c48a9a;
-    }
-
-    .message-input:focus {
-      border-color: #b73a3a;
-      box-shadow: 0 0 10px rgba(183, 58, 58, 0.2);
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; }
-      to { opacity: 1; }
-    }
-
-    /* Label */
-    .input-label {
-      font-size: 14px;
-      color: #9e4a5a;
-      margin-bottom: 8px;
-      animation: fadeIn 1s ease-out 0.5s both;
-    }
-
-    /* Start Button */
-    .start-btn {
-      margin-top: 20px;
-      padding: 12px 32px;
-      font-size: 18px;
-      background: linear-gradient(135deg, #b73a3a, #d4585a);
-      border: none;
-      border-radius: 25px;
-      color: white;
-      cursor: pointer;
-      font-family: 'Patrick Hand', cursive;
-      box-shadow: 0 4px 15px rgba(183, 58, 58, 0.4);
-      animation: fadeIn 1s ease-out 0.9s both, pulse 2s infinite 2s;
-      transition: transform 0.2s, box-shadow 0.2s;
-    }
-
-    .start-btn:hover {
-      transform: scale(1.05);
-      box-shadow: 0 6px 20px rgba(183, 58, 58, 0.5);
-    }
-
-    @keyframes pulse {
-      0%, 100% { transform: scale(1); }
-      50% { transform: scale(1.05); }
-    }
-
-    /* Envelope Animation */
-    .envelope {
-      font-size: 60px;
-      margin-bottom: 10px;
-      animation: bounce 2s ease-in-out infinite;
-    }
-
-    @keyframes bounce {
-      0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(-10px); }
-    }
-
-    /* Content positioning */
-    .start-content {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      width: 300px;
-      transform: translate(-50%, -50%);
-      text-align: center;
-      z-index: 2;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-  </style>
+<link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-<!-- Floating Hearts -->
-<div class="floating-hearts" id="hearts"></div>
+<style>
+  .personal-note {
+    background: rgba(255,255,255,0.7);
+    padding: 10px 16px;
+    border-radius: 12px;
+    margin: 10px auto;
+    max-width: 250px;
+    font-size: 14px;
+    color: #7a2e3a;
+    font-style: italic;
+    border-left: 3px solid #b73a3a;
+    animation: fadeIn 1s ease-out;
+  }
+  .personal-note::before {
+    content: '"';
+  }
+  .personal-note::after {
+    content: '"';
+  }
+  @keyframes fadeIn {
+    from { opacity: 0; transform: translateY(10px); }
+    to { opacity: 1; transform: translateY(0); }
+  }
+  .story-intro {
+    font-size: 13px;
+    color: #9e4a5a;
+    margin-bottom: 5px;
+  }
+</style>
 
 <div class="screen">
   <div class="heart-bg"></div>
 
-  <div class="start-content">
-    <div class="envelope">💌</div>
-    <h1 class="intro-title">A Little Gift of Love</h1>
-    <p class="intro-subtitle">This Valentine's Week might feel incomplete...<br>but here's something special just for you Krashi💕</p>
-    
-    <label class="input-label">Wanna Start together?</label>
-    <textarea 
-      class="message-input" 
-      id="personalMessage" 
-      placeholder=" I would say YES!! Because you make my heart smile ... 💗, what about You?"
-      maxlength="200"
-    ></textarea>
+  <div class="content">
+    <svg viewBox="0 0 300 160" class="curve-text">
+      <path id="curve" d="M30,130 Q150,20 270,130" fill="transparent"/>
+      <text>
+        <textPath href="#curve" startOffset="50%" text-anchor="middle">
+          Ready for 7 days of love?
+        </textPath>
+      </text>
+    </svg>
 
-    <button class="start-btn" onclick="startJourney()">
-      Begin 💝
-    </button>
+    <img src="public/1.gif" class="gif">
+
+    <div id="personalNoteDisplay"></div>
+
+    <div class="buttons">
+      <button onclick="location.href='day1.html'">YES 💕</button>
+      <button onclick="location.href='no.html'">NO</button>
+    </div>
   </div>
 </div>
 
+<script>
+  // Display personal message if exists
+  const personalMsg = localStorage.getItem('personalMessage');
+  if (personalMsg) {
+    document.getElementById('personalNoteDisplay').innerHTML = 
+      '<p class="story-intro">A message for you:</p>' +
+      '<div class="personal-note">' + personalMsg + '</div>';
+  }
+</script>
+
+<!-- 🎵 BACKGROUND MUSIC -->
 <audio id="bgMusic" loop>
   <source src="public/Ishq Wala Love   SOTY.mp3" type="audio/mpeg">
 </audio>
 <script src="music.js"></script>
 
-<script>
-  // Create floating hearts
-  function createHearts() {
-    const container = document.getElementById('hearts');
-    const hearts = ['💕', '💗', '💖', '💝', '❤️', '💓', '💘'];
-    
-    for (let i = 0; i < 15; i++) {
-      const heart = document.createElement('span');
-      heart.className = 'floating-heart';
-      heart.textContent = hearts[Math.floor(Math.random() * hearts.length)];
-      heart.style.left = Math.random() * 100 + '%';
-      heart.style.animationDelay = Math.random() * 6 + 's';
-      heart.style.fontSize = (15 + Math.random() * 15) + 'px';
-      container.appendChild(heart);
-    }
-  }
-  createHearts();
-
-  // Start journey
-  function startJourney() {
-    const message = document.getElementById('personalMessage').value.trim();
-    if (message) {
-      localStorage.setItem('personalMessage', message);
-    } else {
-      localStorage.removeItem('personalMessage');
-    }
-    location.href = 'main.html';
-  }
-</script>
 
 </body>
 </html>
