--- a/index.html
+++ b/index.html
@@ -150,13 +150,55 @@
       position: absolute;
       top: 50%;
       left: 50%;
-      width: 300px;
+      width: 90%;
+      max-width: 300px;
       transform: translate(-50%, -50%);
       text-align: center;
       z-index: 2;
       display: flex;
       flex-direction: column;
       align-items: center;
+      padding: 15px;
+    }
+
+    /* Mobile adjustments */
+    @media (max-width: 400px) {
+      .envelope {
+        font-size: 50px;
+      }
+      .intro-title {
+        font-size: 26px;
+      }
+      .intro-subtitle {
+        font-size: 14px;
+        margin-bottom: 15px;
+      }
+      .message-input {
+        height: 80px;
+        font-size: 14px;
+      }
+      .start-btn {
+        padding: 10px 28px;
+        font-size: 16px;
+        margin-top: 15px;
+      }
+    }
+
+    @media (max-height: 600px) {
+      .envelope {
+        font-size: 40px;
+        margin-bottom: 5px;
+      }
+      .intro-title {
+        font-size: 24px;
+      }
+      .intro-subtitle {
+        font-size: 13px;
+        margin-bottom: 10px;
+      }
+      .message-input {
+        height: 70px;
+      }
     }
   </style>
 </head>
