--- a/no.html
+++ b/no.html
@@ -63,7 +63,7 @@
 
     <!-- Button -->
     <div class="buttons">
-      <button class="growing-btn" onclick="location.href='start.html'" style="background: linear-gradient(135deg, #b73a3a, #d4585a);">
+      <button class="growing-btn" onclick="location.href='index.html'" style="background: linear-gradient(135deg, #b73a3a, #d4585a);">
         Okay, YES! 💕
       </button>
     </div>
