--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>7 Days of Love</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>A Special Gift For You 💝</title>
+  <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+  <style>
+    /* Floating Hearts Background */
+    .floating-hearts {
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+      z-index: 0;
+      pointer-events: none;
+    }
 
-<<<<<<< HEAD
     .floating-heart {
       position: absolute;
       font-size: 20px;
@@ -139,135 +150,78 @@
       position: absolute;
       top: 50%;
       left: 50%;
-      width: 90%;
-      max-width: 300px;
+      width: 300px;
       transform: translate(-50%, -50%);
       text-align: center;
       z-index: 2;
       display: flex;
       flex-direction: column;
       align-items: center;
-      padding: 15px;
-    }
-
-    /* Mobile adjustments */
-    @media (max-width: 400px) {
-      .envelope {
-        font-size: 50px;
-      }
-      .intro-title {
-        font-size: 26px;
-      }
-      .intro-subtitle {
-        font-size: 14px;
-        margin-bottom: 15px;
-      }
-      .message-input {
-        height: 80px;
-        font-size: 14px;
-      }
-      .start-btn {
-        padding: 10px 28px;
-        font-size: 16px;
-        margin-top: 15px;
-      }
-    }
-
-    @media (max-height: 600px) {
-      .envelope {
-        font-size: 40px;
-        margin-bottom: 5px;
-      }
-      .intro-title {
-        font-size: 24px;
-      }
-      .intro-subtitle {
-        font-size: 13px;
-        margin-bottom: 10px;
-      }
-      .message-input {
-        height: 70px;
-      }
     }
   </style>
-=======
-<link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="style.css">
->>>>>>> parent of 6619229 (done?)
 </head>
 
 <body>
 
-<style>
-  .personal-note {
-    background: rgba(255,255,255,0.7);
-    padding: 10px 16px;
-    border-radius: 12px;
-    margin: 10px auto;
-    max-width: 250px;
-    font-size: 14px;
-    color: #7a2e3a;
-    font-style: italic;
-    border-left: 3px solid #b73a3a;
-    animation: fadeIn 1s ease-out;
-  }
-  .personal-note::before {
-    content: '"';
-  }
-  .personal-note::after {
-    content: '"';
-  }
-  @keyframes fadeIn {
-    from { opacity: 0; transform: translateY(10px); }
-    to { opacity: 1; transform: translateY(0); }
-  }
-  .story-intro {
-    font-size: 13px;
-    color: #9e4a5a;
-    margin-bottom: 5px;
-  }
-</style>
+<!-- Floating Hearts -->
+<div class="floating-hearts" id="hearts"></div>
 
 <div class="screen">
   <div class="heart-bg"></div>
 
-  <div class="content">
-    <svg viewBox="0 0 300 160" class="curve-text">
-      <path id="curve" d="M30,130 Q150,20 270,130" fill="transparent"/>
-      <text>
-        <textPath href="#curve" startOffset="50%" text-anchor="middle">
-          Ready for 7 days of love?
-        </textPath>
-      </text>
-    </svg>
+  <div class="start-content">
+    <div class="envelope">💌</div>
+    <h1 class="intro-title">A Little Gift of Love</h1>
+    <p class="intro-subtitle">This Valentine's Week might feel incomplete...<br>but here's something special just for you Krashi💕</p>
+    
+    <label class="input-label">Wanna Start together?</label>
+    <textarea 
+      class="message-input" 
+      id="personalMessage" 
+      placeholder=" I would say YES!! Because you make my heart smile ... 💗, what about You?"
+      maxlength="200"
+    ></textarea>
 
-    <img src="public/1.gif" class="gif">
-
-    <div id="personalNoteDisplay"></div>
-
-    <div class="buttons">
-      <button onclick="location.href='day1.html'">YES 💕</button>
-      <button onclick="location.href='no.html'">NO</button>
-    </div>
+    <button class="start-btn" onclick="startJourney()">
+      Begin 💝
+    </button>
   </div>
 </div>
 
-<script>
-  // Display personal message if exists
-  const personalMsg = localStorage.getItem('personalMessage');
-  if (personalMsg) {
-    document.getElementById('personalNoteDisplay').innerHTML = 
-      '<p class="story-intro">A message for you:</p>' +
-      '<div class="personal-note">' + personalMsg + '</div>';
-  }
-</script>
-
-<!-- 🎵 BACKGROUND MUSIC -->
 <audio id="bgMusic" loop>
   <source src="public/Ishq Wala Love   SOTY.mp3" type="audio/mpeg">
 </audio>
 <script src="music.js"></script>
 
+<script>
+  // Create floating hearts
+  function createHearts() {
+    const container = document.getElementById('hearts');
+    const hearts = ['💕', '💗', '💖', '💝', '❤️', '💓', '💘'];
+    
+    for (let i = 0; i < 15; i++) {
+      const heart = document.createElement('span');
+      heart.className = 'floating-heart';
+      heart.textContent = hearts[Math.floor(Math.random() * hearts.length)];
+      heart.style.left = Math.random() * 100 + '%';
+      heart.style.animationDelay = Math.random() * 6 + 's';
+      heart.style.fontSize = (15 + Math.random() * 15) + 'px';
+      container.appendChild(heart);
+    }
+  }
+  createHearts();
+
+  // Start journey
+  function startJourney() {
+    const message = document.getElementById('personalMessage').value.trim();
+    if (message) {
+      localStorage.setItem('personalMessage', message);
+    } else {
+      localStorage.removeItem('personalMessage');
+    }
+    location.href = 'start.html';
+  }
+</script>
 
 </body>
 </html>
